--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "react": "^15.4.1",
-    "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.0.0-beta.6"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --optimize-minimize",
     "serve": "webpack-dev-server --content-base src --progress --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 9090"
   },
   "author": "Blaise Marchetti <marchetti.14@osu.edu>",
